Яценко Іван ІН-31-1_Лаб 6

--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@
   </main>
 
   <footer class="site-footer">
-    <small>&copy; 2025 — ЛР5, Стилізація вебсторінки за допомогою CSS</small>
+    <small>&copy; 2025 — ЛР6, Адаптивний макет (Grid + Flexbox)</small>
   </footer>
 </body>
 </html>
